--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1><p><strong>Nhật Ký Học Code Của Pía Hạ</strong></p></h1>
   <h3><p>Xin chào các bạng, mj`nk là <em>Jan Xink</em>😇</p></h3>
-  <img src="./index_files/200.gif" alt="jangioiquane">
+  <img src="https://media4.giphy.com/media/YFis3URdQJ6qA/200.gif">
   <h2>What's covered here?</h2>
     <ul>
       <li>About me👸</li>
@@ -18,7 +18,7 @@
     <br><br><h2>About me </h2>
       <table>
         <tbody><tr>
-          <td><h3><p>My starmap 🌟    </p></h3></td>
+          <td><h3><p>My starmap 🌟</p></h3></td>
           <td><img src="./index_files/rm3w9yS.png" width="320" height="345"></td>
         </tr>
       </tbody></table>
