--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1><p><strong>Nhật Ký Học Code Của Pía Hạ</strong></p></h1>
   <h3><p>Xin chào các bạng, mj`nk là <em>Jan Xink</em>😇</p></h3>
-  <img src="https://media4.giphy.com/media/YFis3URdQJ6qA/200.gif">
+  <img src="https://media4.giphy.com/media/YFis3URdQJ6qA/200.gif" />
   <h2>What's covered here?</h2>
     <ul>
       <li>About me👸</li>
@@ -19,21 +19,21 @@
       <table>
         <tbody><tr>
           <td><h3><p>My starmap 🌟</p></h3></td>
-          <td><img src="./index_files/rm3w9yS.png" width="320" height="345"></td>
+          <td><img src="https://chiemtinhlaso.com/online_calcs/scripts/natal_wheel.php?rx1=%20%20%20%20%20%20%20%20%20%20%20&p1=a%3A41%3A%7Bi%3A0%3Bs%3A12%3A%22+292.2873256%22%3Bi%3A1%3Bs%3A12%3A%22+238.7693272%22%3Bi%3A2%3Bs%3A12%3A%22+278.7741034%22%3Bi%3A3%3Bs%3A12%3A%22+310.3570386%22%3Bi%3A4%3Bs%3A12%3A%22+204.1035738%22%3Bi%3A5%3Bs%3A12%3A%22+353.8485448%22%3Bi%3A6%3Bs%3A11%3A%22+26.9567077%22%3Bi%3A7%3Bs%3A12%3A%22+311.6035328%22%3Bi%3A8%3Bs%3A12%3A%22+301.4996059%22%3Bi%3A9%3Bs%3A12%3A%22+249.5082401%22%3Bi%3A10%3Bs%3A12%3A%22+240.5654752%22%3Bi%3A11%3Bs%3A12%3A%22+223.9256189%22%3Bi%3A12%3Bs%3A12%3A%22+142.5582644%22%3Bi%3A13%3Bd%3A340.25255170000003%3Bi%3A14%3Bs%3A12%3A%22+158.9855976%22%3Bi%3A15%3Bs%3A12%3A%22+353.1037423%22%3Bi%3A16%3Bs%3A12%3A%22+140.2754318%22%3Bi%3A17%3Bs%3A12%3A%22+286.7345533%22%3Bi%3A18%3Bs%3A12%3A%22+318.2616988%22%3Bi%3A19%3Bs%3A12%3A%22+351.8647985%22%3Bi%3A20%3Bs%3A11%3A%22+24.5489989%22%3Bi%3A21%3Bs%3A11%3A%22+53.8555168%22%3Bi%3A22%3Bs%3A11%3A%22+80.4121873%22%3Bi%3A23%3Bs%3A12%3A%22+106.7345533%22%3Bi%3A24%3Bs%3A12%3A%22+138.2616988%22%3Bi%3A25%3Bs%3A12%3A%22+171.8647985%22%3Bi%3A26%3Bs%3A12%3A%22+204.5489989%22%3Bi%3A27%3Bs%3A12%3A%22+233.8555168%22%3Bi%3A28%3Bs%3A12%3A%22+260.4121873%22%3Bi%3A29%3Bs%3A12%3A%22+286.7345533%22%3Bi%3A30%3Bs%3A12%3A%22+204.5489989%22%3Bi%3A31%3Bs%3A12%3A%22+202.7373491%22%3Bi%3A32%3Bs%3A12%3A%22+158.9855976%22%3Bi%3A33%3Bs%3A12%3A%22+291.0317528%22%3Bi%3A34%3Bs%3A12%3A%22+295.0950178%22%3Bi%3A35%3Bs%3A12%3A%22+208.5999571%22%3Bi%3A36%3Bs%3A12%3A%22+115.0950178%22%3Bi%3A40%3Bs%3A11%3A%22+59.3886312%22%3Bi%3A41%3Bs%3A12%3A%22+239.2956700%22%3Bi%3A42%3Bs%3A12%3A%22+353.1037423%22%3Bi%3A43%3Bs%3A12%3A%22+140.2754318%22%3B%7D&hc1=a%3A16%3A%7Bi%3A1%3Bs%3A12%3A%22+286.7345533%22%3Bi%3A2%3Bs%3A12%3A%22+318.2616988%22%3Bi%3A3%3Bs%3A12%3A%22+351.8647985%22%3Bi%3A4%3Bs%3A11%3A%22+24.5489989%22%3Bi%3A5%3Bs%3A11%3A%22+53.8555168%22%3Bi%3A6%3Bs%3A11%3A%22+80.4121873%22%3Bi%3A7%3Bs%3A12%3A%22+106.7345533%22%3Bi%3A8%3Bs%3A12%3A%22+138.2616988%22%3Bi%3A9%3Bs%3A12%3A%22+171.8647985%22%3Bi%3A10%3Bs%3A12%3A%22+204.5489989%22%3Bi%3A11%3Bs%3A12%3A%22+233.8555168%22%3Bi%3A12%3Bs%3A12%3A%22+260.4121873%22%3Bi%3A13%3Bs%3A12%3A%22+286.7345533%22%3Bi%3A14%3Bs%3A12%3A%22+204.5489989%22%3Bi%3A15%3Bs%3A12%3A%22+202.7373491%22%3Bi%3A16%3Bs%3A12%3A%22+158.9855976%22%3B%7D&hpos=a%3A41%3A%7Bi%3A0%3Bi%3A1%3Bi%3A1%3Bi%3A11%3Bi%3A2%3Bi%3A12%3Bi%3A3%3Bi%3A1%3Bi%3A4%3Bi%3A9%3Bi%3A5%3Bi%3A3%3Bi%3A6%3Bi%3A4%3Bi%3A7%3Bi%3A1%3Bi%3A8%3Bi%3A1%3Bi%3A9%3Bi%3A11%3Bi%3A10%3Bi%3A11%3Bi%3A11%3Bi%3A10%3Bi%3A12%3Bi%3A8%3Bi%3A13%3Bi%3A2%3Bi%3A14%3Bi%3A8%3Bi%3A15%3Bi%3A3%3Bi%3A16%3Bi%3A8%3Bi%3A17%3BN%3Bi%3A18%3BN%3Bi%3A19%3BN%3Bi%3A20%3BN%3Bi%3A21%3BN%3Bi%3A22%3BN%3Bi%3A23%3BN%3Bi%3A24%3BN%3Bi%3A25%3BN%3Bi%3A26%3BN%3Bi%3A27%3BN%3Bi%3A28%3BN%3Bi%3A29%3BN%3Bi%3A30%3BN%3Bi%3A31%3BN%3Bi%3A32%3BN%3Bi%3A33%3BN%3Bi%3A34%3BN%3Bi%3A35%3BN%3Bi%3A36%3BN%3Bi%3A40%3Bi%3A2%3Bi%3A41%3Bi%3A8%3Bi%3A42%3Bi%3A3%3Bi%3A43%3Bi%3A8%3B%7D&l1=kim%20ho%C3%A0ng%20h%E1%BA%A1,%20sinh%20ng%C3%A0y%2013%20th%C3%A1ng%2001%20n%C4%83m%201999%20v%C3%A0o%20l%C3%BAc%2005:55%20(M%C3%BAi%20Gi%E1%BB%9D%20=%20GMT%20+7%20hours)%20t%E1%BA%A1i%20107%C2%B000%20kinh%20%C4%90%C3%B4ng%20v%C3%A0%2011%C2%B000%20v%C4%A9%20B%E1%BA%AFc&ubt1=0" width="320" height="345"></td>
         </tr>
       </tbody></table>
         <p><em>"Scorpio Moon was born a fighter and has the same tenacity they apply to emotions in all areas of their life"</em></p>
       <br><br><table>
         <tbody><tr>
           <td><h3><p><br>My MBTI 🙋‍♀️</p></h3></td>
-          <td><img src="./index_files/c115b3009e39b62ff8a8f73064cd5ee1.jpg" width="282" height="358"></td>
+          <td><img src="https://s3.amazonaws.com/thumbnails.venngage.com/template/3368fe90-ccde-4c62-b148-a751f6c4b1c2.png" width="282" height="358"></td>
         </tr>
       </tbody></table>
         <p><em>"An ESTP loves to be the center of attention and tend to have a good sense of humor, <br>amusing everyone around them with their captivating personalities"</em></p>
       <br><br><table>
         <tbody><tr>
           <td><h3><p>My Life-path number 6️⃣</p></h3></td>
-          <td><img src="./index_files/4267dba407e49d9d2ed7b36fa7b88a48.jpg" width="281" height="257">
+          <td><img src="https://pbs.twimg.com/media/EJNmqF6W4AAnN7W.jpg" width="287" height="345">
         </td></tr>
       </tbody></table>
          <p><em>"They are harmony lovers and often overlook their own needs and requirements to help those who need them"</em></p>
