--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <br><br><table>
         <tbody><tr>
           <td><h3><p><br>My MBTI 🙋‍♀️</p></h3></td>
-          <td><img src="https://s3.amazonaws.com/thumbnails.venngage.com/template/3368fe90-ccde-4c62-b148-a751f6c4b1c2.png" width="282" height="358"></td>
+          <td><img src="https://s3.amazonaws.com/thumbnails.venngage.com/template/3368fe90-ccde-4c62-b148-a751f6c4b1c2.PNG" width="282" height="358"></td>
         </tr>
       </tbody></table>
         <p><em>"An ESTP loves to be the center of attention and tend to have a good sense of humor, <br>amusing everyone around them with their captivating personalities"</em></p>
